--- a/package.json
+++ b/package.json
@@ -4,13 +4,17 @@
   "description": "",
   "main": "hello.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node web-server/src/app.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "chalk": "^4.0.0",
     "validator": "^10.8.0",
-    "yargs": "^12.0.2"
+    "yargs": "^12.0.2",
+    "express": "^4.17.1",
+    "hbs": "^4.1.1",
+    "request": "^2.88.2"
   }
 }
